# qt-shool-manager

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  school.sql
backend/: CMakeLists.txt  database_manager.cpp  database_manager.h  domain.h  edit_dialog.cpp  edit_dialog.h  table.cpp  table.h  user.cpp  user.h
resources/: resources.qrc
